// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders ElectionInfoBar with all precincts wording 1`] = `
<div>
  <div
    class="sc-eCImvq gZAahg"
    data-testid="electionInfoBar"
  >
    <div
      class="sc-bdvvaa fLugxj"
      style="flex: 1;"
    >
      <strong>
        General Election
      </strong>
       —
       
      <span
        class="sc-dkPtyc gbBfTJ"
      >
        Nov 3, 2020
      </span>
      <div
        class="sc-gsDJrp hIGrZm"
      >
        <span
          class="sc-dkPtyc gbBfTJ"
        >
          All Precincts
          ,
        </span>
         
        <span
          class="sc-dkPtyc gbBfTJ"
        >
          Franklin County
          ,
        </span>
         
        <span
          class="sc-dkPtyc gbBfTJ"
        >
          State of Hamilton
        </span>
      </div>
    </div>
    <div
      class="sc-bdvvaa iOQknX"
    >
      <div
        class="sc-gsDJrp hIGrZm"
      >
        Election ID
      </div>
      <strong>
        748dc61ad3
      </strong>
    </div>
  </div>
</div>
`;

exports[`Renders ElectionInfoBar without precinct information by default 1`] = `
<div>
  <div
    class="sc-eCImvq gZAahg"
    data-testid="electionInfoBar"
  >
    <div
      class="sc-bdvvaa fLugxj"
      style="flex: 1;"
    >
      <strong>
        General Election
      </strong>
       —
       
      <span
        class="sc-dkPtyc gbBfTJ"
      >
        Nov 3, 2020
      </span>
      <div
        class="sc-gsDJrp hIGrZm"
      >
        <span
          class="sc-dkPtyc gbBfTJ"
        >
          Franklin County
          ,
        </span>
         
        <span
          class="sc-dkPtyc gbBfTJ"
        >
          State of Hamilton
        </span>
      </div>
    </div>
    <div
      class="sc-bdvvaa iOQknX"
    >
      <div
        class="sc-gsDJrp iwrhML"
      >
        Software Version
      </div>
      <strong>
        DEV
      </strong>
    </div>
    <div
      class="sc-bdvvaa iOQknX"
    >
      <div
        class="sc-gsDJrp iwrhML"
      >
        Machine ID
      </div>
      <strong>
        0000
      </strong>
    </div>
    <div
      class="sc-bdvvaa iOQknX"
    >
      <div
        class="sc-gsDJrp hIGrZm"
      >
        Election ID
      </div>
      <strong>
        748dc61ad3
      </strong>
    </div>
  </div>
</div>
`;

exports[`Renders admin ElectionInfoBar with precinct set 1`] = `
<div>
  <div
    class="sc-eCImvq gZAahg"
    data-testid="electionInfoBar"
  >
    <div
      class="sc-bdvvaa fLugxj"
      style="flex: 1;"
    >
      <strong>
        General Election
      </strong>
       —
       
      <span
        class="sc-dkPtyc gbBfTJ"
      >
        Nov 3, 2020
      </span>
      <div
        class="sc-gsDJrp hIGrZm"
      >
        <span
          class="sc-dkPtyc gbBfTJ"
        >
          Center Springfield
          ,
        </span>
         
        <span
          class="sc-dkPtyc gbBfTJ"
        >
          Franklin County
          ,
        </span>
         
        <span
          class="sc-dkPtyc gbBfTJ"
        >
          State of Hamilton
        </span>
      </div>
    </div>
    <div
      class="sc-bdvvaa iOQknX"
    >
      <div
        class="sc-gsDJrp iwrhML"
      >
        Software Version
      </div>
      <strong>
        DEV
      </strong>
    </div>
    <div
      class="sc-bdvvaa iOQknX"
    >
      <div
        class="sc-gsDJrp iwrhML"
      >
        Machine ID
      </div>
      <strong>
        0002
      </strong>
    </div>
    <div
      class="sc-bdvvaa iOQknX"
    >
      <div
        class="sc-gsDJrp hIGrZm"
      >
        Election ID
      </div>
      <strong>
        748dc61ad3
      </strong>
    </div>
  </div>
</div>
`;
